* Fixed layout issue

--- a/pyramus/src/main/webapp/css/application-management-mobile.css
+++ b/pyramus/src/main/webapp/css/application-management-mobile.css
@@ -16,7 +16,7 @@ body {
   font-family: "Exo 2", arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
-  justify-content: space-between;
+  justify-content: flex-start;
   line-height: 1.5;
   margin: 0;
   min-height: 100vh;
